fix(#9250): fix SonarCloud contrast and quality gate warnings

--- a/webapp/src/css/bikramsambat.less
+++ b/webapp/src/css/bikramsambat.less
@@ -152,7 +152,7 @@
     }
     
     th {
-      color: #444;
+      color: #595959;
       font-weight: 700;
       text-align: center;
       cursor: default;
@@ -172,8 +172,8 @@
       cursor: pointer;
       
       &.current-month-date:hover {
-        background-color: #2563eb;
-        color: #fff;
+        background-color: #718fcd;
+        color: #1e293b;
         font-weight: 700;
       }
       
@@ -295,8 +295,8 @@
       }
       
       &.active {
-        background-color: #15803d;
-        color: #fff;
+        background-color: #7bde77;
+        color: #155724;
         font-weight: 700;
       }
     }
@@ -314,8 +314,8 @@
 
 /* Active date styling */
 .current-month-date.active {
-  background-color: #15803d;
-  color: #fff;
+  background-color: #7bde77;
+  color: #155724;
   font-weight: 700;
 }
 
